Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127863

DragHandler Activates When Dragging Starts Outside the Item and Moves Inside

XMLWordPrintable

    • e5522fe5b (dev), ba898e79c (6.10), a3fa99fb7 (6.9), 0f02ce33f (dev), 0f7d8f920 (6.10), 4310c0644 (tqtc/lts-6.8), 08c1b73fd (6.9), 03abf408e (tqtc/lts-6.8)

      If dragging starts from outside an item that includes a DragHandler, the item's DragHandler will be activated when the cursor moves over the item.

      Steps to Reproduce:

      • Run the snippet
      • Start dragging from outside the red rectangle
      • Move the cursor over the rectangle
      • Then try to move it outside again
      • Drop it

      EXPECTED:

      The rectangle's DragHandler should not be activated since dragging started from outside the rectangle

      ACTUAL

      • The rectangle's DragHandler is activated as long as the cursor is inside the rectangle.
      • The red rectangle moves with the cursor (in case of commenting target: null)

       

       

      import QtQuick
      import QtQuick.Window
      import QtQuick.Controls
       
      ApplicationWindow {
          id: root
          width: 500
          height: 500
          visible: true
       
          Rectangle {
              x: 200
              y: 200
              width: 100
              height: 100
              color: "red"
              DragHandler {
                  onActiveChanged: print("active:", active)
                  // target: null
              }
          }
      }
      

       

       

        For Gerrit Dashboard: QTBUG-127863
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            mhqanbari MohammadHossein Qanbari
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: